--- a/style.css
+++ b/style.css
@@ -85,6 +85,8 @@ to {
 @media (max-width: 480px) {
   .typing-effect {
     font-size: 1rem;
+    overflow:auto;
+    text-wrap:unset;
   }
 
   .btn {
