--- a/style.css
+++ b/style.css
@@ -93,8 +93,8 @@ body {
 
   p {
     overflow:scroll;
-    text-wrap:initial;
-    text-wrap-style:balance;
-    font-size: 0.4rem; /* Adjust paragraph font size */
+    font-size: 0.4rem;
+    height:max-content;
+    /* Adjust paragraph font size */
   }
 }
